# agentclinic

./: .gitignore  LICENSE  PRD_AgentClinic_v1.md  README.md  entry-points.json  main.mermaid  main.py  project.uiproj  pyproject.toml  uipath.json
.agent/: SDK_REFERENCE.md
.github/workflows/: ci.yml
contracts/: README.md  finding_schema_v1.json  trace_schema_v1.json
core/: README.md
core/agentclinic/: __init__.py  cli.py  detect.py  normalize.py  report.py  score.py  validate.py
core/agentclinic/budget/: __init__.py  budget_rules.json  guardian.py
core/agentclinic/coach/: __init__.py  apply.py  base.py  mock.py  uipath_llm.py  validator.py  vertex.py
core/agentclinic/config/: model_pricing.json  report_templates.json  rules.json  (+1 more)
docs/: DEMO_SCRIPT.md  ERROR_MATRIX.md  P2_SPIKE_RESULT.md  PLAN_P2_and_BudgetGuardian.md  SUBMISSION.md  Submission deck - AgentClinic.pptx  demo.srt
examples/: sample_report_01.md
examples/golden_budget/: 01_yellow_normal_pace.golden.json  02_orange_save_tokens.golden.json  03_red_reserve_floor.golden.json  04_time_race_parallel_amplifier.golden.json  05_unknown_usage_input.golden.json
examples/golden_traces/: 01_hard_hat_loop.golden.json  02_clean_run.golden.json  03_redundant_and_full_read.golden.json  04_unverified_claim_missing_tokens.golden.json  05_interleaved_think_retry.golden.json
scripts/: build_deck.py  d1_overwrite_acr2_1_reason.py  d2_overwrite_4ab12aca_reason.py  d_assign_ck_owner.py  hotfix_acr2_86_reason.py  probe_4ab12aca_logs.py  probe_override_result.py  probe_project_access.py  verify_two_executions.py
(+5 files in other folders)
