[project]
name = "agentclinic-coded-agent"
version = "0.1.1"
description = "AgentClinic — deterministic forensic analysis of AI agent traces (UiPath Coded Agent entry)"
authors = [{ name = "Chloe + 司機" }]
requires-python = ">=3.11"
dependencies = [
    "uipath>=2.10.0,<2.11.0",
    "jsonschema>=4.0",
    "rfc3339-validator>=0.1",
    "requests>=2.31",
]
