[project]
name = "agentclinic-coded-agent"
version = "0.1.2"
description = "AgentClinic — deterministic forensic analysis of AI agent traces (UiPath Coded Agent entry)"
authors = [{ name = "Chloe Kao" }]
requires-python = ">=3.11"
dependencies = [
    "uipath>=2.10.0,<2.11.0",
    "jsonschema>=4.0",
    "rfc3339-validator>=0.1",
    "requests>=2.31",
]
